updated figure references to the burstiness figures

--- a/fault_tolerance_report.tex
+++ b/fault_tolerance_report.tex
@@ -326,7 +326,7 @@ A fault in the \textbf{boot ROM} can be easily detected during start-up if the b
 \begin{figure}[b]
 	\begin{subfigure}{.5\linewidth}
 		\centering
-		\includegraphics[width=0.9\linewidth]{images/bursting.pdf}
+		\includegraphics[width=0.9\linewidth]{images/bursting2.pdf}
 		\caption{Bursting (simulated annealing)}
 		\label{fig:bursting}
 	\end{subfigure}
@@ -352,7 +352,7 @@ Adding the line \verb|e.burst_phase = None| (to \verb|bursting.py|) before \verb
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.5\linewidth]{images/bursting_random.pdf}
+	\includegraphics[width=0.5\linewidth]{images/bursting_random2.pdf}
 	\caption{Network congestion in a bursty (random) situation.}	
 	\label{fig:bursting_random}
 \end{figure}
